feat(pom): 升级springboot2.7,jdk升级到17
(cherry picked from commit 668f2a834ac8acc3b4a78ca0249f40c2d7d95dce)